--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Listen</string>
+
+
+
+    <string name="notification_channel_name">Notification</string>
+    <string name="notification_channel_description">Notification from Booktastic</string>
 </resources>
